fix spacing issues
i get to remove some things! and add some other things...

--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -11,6 +11,11 @@
 	justify-content: center;
 	align-items: center;
 
+	// display: inline-flex collapses inline whitespace
+	// white-space: pre brings it back, although it will
+	// also show newlines, so be careful.
+	white-space: pre;
+
 	padding: 1ex 2em;
 	border: solid 1px transparent;
 
