--- a/src/components/semester.scss
+++ b/src/components/semester.scss
@@ -57,7 +57,7 @@ $semester-edge-padding:
 	}
 
 	.button {
-		padding: 0 0.5em;
+		padding: 0 0.4em;
 		min-height: 0;
 		font-size: 0.9em;
 
