--- a/src/screens/student-picker.scss
+++ b/src/screens/student-picker.scss
@@ -83,7 +83,6 @@
 	margin: 0 0.25em;
 
 	.icon {
-		padding-bottom: 0.2em;
 		font-size: 1em;
 	}
 }
